k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbitflow-backend
  namespace: orbitflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orbitflow-backend
  template:
    metadata:
      labels:
        app: orbitflow-backend
    spec:
      containers:
        - name: backend
          image: ritiksuteri/orbitflow-backend:v4
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
