k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbitflow-frontend
  namespace: orbitflow
spec:
  replicas: 2

  selector:
    matchLabels:
      app: orbitflow-frontend

  template:
    metadata:
      labels:
        app: orbitflow-frontend

    spec:
      containers:
        - name: frontend
          image: ritiksuteri/orbitflow-frontend:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
