k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: orbitflow
spec:
  selector:
    app: orbitflow-backend

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
