k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: orbitflow
spec:
  selector:
    app: orbitflow-frontend

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
