k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbitflow-ingress
  namespace: orbitflow

spec:
  ingressClassName: nginx

  rules:
    - host: orbitflow.local
      http:
        paths:
          - path: /api-v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: / 
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
